<resources>
    <string name="app_name">Fiberbasechat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>

    <string name="create_account">Create Account</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">email</string>
    <string name="reg_password">password</string>
    <string name="slate_view">slate</string>
    <string name="logout">logout</string>
    <string name="create_a_new_accout">Create A New Accout</string>
    <string name="Registering">Registering User</string>
    <string name="example_email_com">example@email.com</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="loginbar">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="hi_welcome_to_my_profile">hi welcome to my profile</string>
    <string name="change_image">change image</string>
    <string name="change_status">Change status</string>
    <string name="your_status">Your Status</string>
    <string name="Savestatus">Save</string>
    <string name="title_activity_view_port">Map</string>
    <string name="viewport">ViewPort</string>
    <string name="search">Search</string>
</resources>
